# album-manager-googlephotos

./: .gitignore  LICENSE  README.md  pyproject.toml
album_manager_googlephotos/: google_helper.py  push_local_structure_to_googlephotos.py
